--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AVL Tree Car Game</title>
 
+    <!-- Self resources -->
     <link rel="stylesheet" href="./app/assets/css/main.css" />
     <script defer type="module" src="./app/assets/js/main.mjs"></script>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="./app/utils/bootstrap/vapor/bootstrap.min.css" />
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </head>
-  <body></body>
+  <body>
+    <header class="header text-center"><h1>AVL Tree Car Game - Project 1</h1></header>
+
+    <main>
+      <div class="card border-success mb-3" style="max-width: 20rem">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h4 class="card-title">Success card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
