Add tests making 'component' concepts, using it and others

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,9 @@
     <header class="header text-center"><h1>AVL Tree Car Game - Project 1</h1></header>
 
     <main>
-      <div class="card border-success mb-3" style="max-width: 20rem">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h4 class="card-title">Success card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
+      <button id="btn1" class="btn btn-primary">Show Menu</button>
+      <button id="btn2" class="btn btn-primary">Hide Menu</button>
+      <div id="menu1"></div>
     </main>
   </body>
 </html>
