--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,12 @@
         <script defer type="module" src="./app/assets/js/main.mjs"></script>
 
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="./app/utils/bootstrap/vapor/bootstrap.min.css" />
-        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <script defer src="./app/utils/bootstrap/js/bootstrap.bundle.min.js"></script>
 
         <!-- D3.js -->
         <script defer src="https://d3js.org/d3.v7.min.js"></script>
     </head>
-    <body>
+    <body class="d-flex flex-column vh-75 bg-dark" data-bs-theme="dark">
         <header class="header text-center"><h1>AVL Tree Car Game - Project 1</h1></header>
 
         <main>
@@ -28,8 +27,8 @@
 
             <!-- Think keep -->
             <div id="road-game"></div>
-            <div id="tree-wrap">
-                <div id="tree-render"></div>
+            <div class="no-scroolbars" id="tree-wrap">
+                <div class="no-scroolbars" id="tree-render"></div>
             </div>
         </main>
     </body>
