Ref: #3, Update project, add images, update controllers, this is first functional initial screen functional, only can add width road and add obstacles to these road!

--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,17 @@
         <!-- <header class="header text-center h-auto"><h1>AVL Tree Car Game - Project 1</h1></header> -->
 
         <main class="h-100">
+            <div id="start-screen"></div>
             <!-- <p id="ws-connection">Offline</p> -->
             <!-- Think keep -->
-            <div class="road-container row h-50 mb-4" id="road-game"></div>
+            <div class="road-container row h-50 mb-4 visually-hidden" id="road-game">
+                <div id="road-container">
+                    <div class="car-ctn" id="ctn-car"></div>
+                </div>
+            </div>
 
             <!-- Tree AVl containers -->
-            <div class="no-scrollbars tree-container row" id="tree-wrap">
+            <div class="no-scrollbars tree-container row visually-hidden" id="tree-wrap">
                 <div class="no-scrollbars tree-rendered h-100" id="tree-render"></div>
             </div>
         </main>
