See #4, Update main and URLAPI in configs

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
 
         <!-- D3.js -->
         <script defer src="https://d3js.org/d3.v7.min.js"></script>
+
+        <!-- Socket-io -->
+        <script defer type="module" src="./app/utils/socket-io/socket.io.min.js"></script>
     </head>
     <body class="d-flex flex-column vh-100 bg-dark overflow-hidden p-4" data-bs-theme="dark">
         <!-- <header class="header text-center h-auto"><h1>AVL Tree Car Game - Project 1</h1></header> -->
