See #5, major commit, many updates of css html and services, code is functional, minor bugs, but is normally...

--- a/src/index.html
+++ b/src/index.html
@@ -21,20 +21,6 @@
     <body class="d-flex flex-column vh-100 bg-dark overflow-hidden p-4" data-bs-theme="dark">
         <!-- <header class="header text-center h-auto"><h1>AVL Tree Car Game - Project 1</h1></header> -->
 
-        <main class="h-100">
-            <div id="start-screen"></div>
-            <!-- <p id="ws-connection">Offline</p> -->
-            <!-- Think keep -->
-            <div class="road-container row h-50 mb-4 visually-hidden" id="road-game">
-                <div id="road-container">
-                    <div class="car-ctn" id="ctn-car"></div>
-                </div>
-            </div>
-
-            <!-- Tree AVl containers -->
-            <div class="no-scrollbars tree-container row visually-hidden" id="tree-wrap">
-                <div class="no-scrollbars tree-rendered h-100" id="tree-render"></div>
-            </div>
-        </main>
+        <main class="h-100"></main>
     </body>
 </html>
